# NeuralNet

./: .gitmodules  Analysis.docx  CMakeLists.txt
data/: CMakeLists.txt  params.txt
neuralNet/: CMakeLists.txt  main.cpp
neuralNet_shared/: CMakeLists.txt  Cluster.cpp  Cluster.hpp  Edge.cpp  Edge.hpp  Layer.cpp  Layer.hpp  Network.cpp  Network.hpp  Node.cpp  Node.hpp  Utils.hpp
neuralNet_tests/: CMakeLists.txt
neuralNet_tests/tests/: BlankTest.cpp  CMakeLists.txt
